--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,10 @@
 .strong-text {
   font-weight: bold;
 }
+
+:root {
+  --nero-black: #1c1b1b;
+  --dim-gray: #6a6a6a;
+  --green: #20582b;
+  --casablanc: #e8b05b;
+}
