--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600&display=swap");
+
 .strong-text {
   font-weight: bold;
 }
@@ -7,4 +9,8 @@
   --dim-gray: #6a6a6a;
   --green: #20582b;
   --casablanc: #e8b05b;
+}
+
+.font-montserrat {
+  font-family: "Montserrat", sans-serif;
 }
